--- a/src/app/view/historias-medicas/historias-medicas.component.scss
+++ b/src/app/view/historias-medicas/historias-medicas.component.scss
@@ -234,7 +234,6 @@ table {
   background: #b2ebf2;
 }
 
-
 /* Responsive */
 @media (max-width: 767.98px) {
   .table-responsive-custom {
@@ -246,9 +245,14 @@ table {
     min-width: 100%;
   }
 
+  .buscadorPaciente {
+    margin-top: 15px;
+  }
+
   ::ng-deep .select-optometria .ng-dropdown-panel {
     width: 100% !important;
     left: 0 !important;
     right: 0 !important;
   }
+
 }
