Ocultar el buscador en header

--- a/src/app/view/sidebar/sidebar.component.html
+++ b/src/app/view/sidebar/sidebar.component.html
@@ -50,7 +50,7 @@
         </div>
 
         <!-- 🔍 Bloque derecho: buscador -->
-        <li class="nav-item">
+       <!-- <li class="nav-item">
           <a class="nav-link" data-widget="navbar-search" href="#" role="button">
             <i class="fas fa-search"></i>
           </a>
@@ -69,7 +69,7 @@
               </div>
             </form>
           </div>
-        </li>
+        </li>-->
       </ul>
     </nav>
     <!-- /.navbar -->
