--- a/src/app/view/my-account/my-account.component.html
+++ b/src/app/view/my-account/my-account.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
     <div class="row justify-content-center">
         <div class="col-12 col-md-10 col-lg-9">
-            <div class="card">
+            <div class="card mb-5">
                 <!-- Pestañas de Navegación -->
                 <ul class="nav nav-tabs nav-justified" id="myAccountTabs" role="tablist">
                     <li class="nav-item">
@@ -121,7 +121,6 @@
                         </form>
                     </div>
 
-
                     <!-- Tab: Editar Contraseña -->
                     <div class="tab-pane fade" id="editPassword" role="tabpanel" aria-labelledby="edit-password-tab">
                         <form #passwordForm="ngForm">
@@ -206,7 +205,6 @@
                             </div>
                         </form>
                     </div>
-
                 </div>
             </div>
         </div>
