Ajuste graficos en dashboard

--- a/src/app/view/historias-medicas/historias-medicas.component.html
+++ b/src/app/view/historias-medicas/historias-medicas.component.html
@@ -528,7 +528,7 @@
                     <div class="row">
                       <div class="col-md-4 mb-0">
                         <strong>Tipo de cristal:</strong><br>
-                        <p class="ms-0 bg-light rounded p-2">{{ rec.cristal?.label || 'No especificado' }}</p>
+                        <p class="ms-0 bg-light rounded p-2">{{ rec.cristal.label || 'No especificado' }}</p>
                       </div>
                       <div class="col-md-4 mb-0">
                         <strong>Material:</strong><br>
